--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,17 @@ dependencies {
 
 	// 서버단에서 화면을 만들어서 렌더링('화면을 만들어서 준다' 라는 의미) 해주기 위한 기술 중 하나
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	
+	// 로그인을 위한 security 의존성
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// jwt토큰 관련 라이브러리 추가
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'  // JSON 처리에 필요
+
+	// 쿼리 결과 보기(바인딩 된 파라미터)
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
 }
 
 tasks.named('test') {
