--- a/build.gradle
+++ b/build.gradle
@@ -53,13 +53,13 @@ dependencies {
 	// 로그인을 위한 security 의존성
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
-	// jwt토큰 관련 라이브러리 추가
+	// jwt 토큰 관련 라이브러리 추가
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'  // JSON 처리에 필요
 
-	// 쿼리 결과 보기(바인딩 된 파라미터)
-	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+	// 파일처리를 위한 aws 의존성 추가
+	implementation 'software.amazon.awssdk:s3:2.17.58'
 }
 
 tasks.named('test') {
